--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,22 @@
       name="description"
       content="Search the fishing regulations for any lake or river in Alberta."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/android-chrome-512x512.png"
+      sizes="512x512"
+    />
+
+    <!-- Android -->
+    <link
+      rel="shortcut icon"
+      sizes="192x192"
+      href="%PUBLIC_URL%/android-chrome-192x192.png"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
