Tweaking SEO description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <title data-react-helmet="true">
       Alberta Fishing Regulations | AB Fishing
     </title>
+    <meta
+      name="description"
+      content="View the fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers in Alberta."
+      data-react-helmet="true"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
