Minor SEO Tweak

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     </title>
     <meta
       name="description"
-      content="View the fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers in Alberta."
+      content="View Alberta's fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers."
       data-react-helmet="true"
     />
     <meta charset="utf-8" />
