Changes for facebook sharing

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       content="View Alberta's fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers."
       data-react-helmet="true"
     />
+    <meta
+      property="og:title"
+      content="Alberta Fishing Regulations"
+      data-react-helmet="true"
+    />
+    <meta
+      property="og:description"
+      content="View Alberta's fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers."
+      data-react-helmet="true"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
