The gang sells out

--- a/public/index.html
+++ b/public/index.html
@@ -9354,6 +9354,12 @@
       }
     </script>
 
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6777086735488213"
+      crossorigin="anonymous"
+    ></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
