--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
-      rel="stylesheet"
+      rel="preload"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
 
     <!--
