Adding canonical URLs to duplicate regulations URLs

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       content="View Alberta's fishing regulations including catch limits, bait bans, and open seasons for lakes and rivers."
       data-react-helmet="true"
     />
+    <link rel="canonical" href="https://www.abfishing.ca" data-react-helmet="true" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
