Removing google ads for now

--- a/public/index.html
+++ b/public/index.html
@@ -89,11 +89,11 @@
       }
     </script>
 
-    <script
+    <!-- <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6777086735488213"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     <!--
       This HTML file is a template.
