--- a/public/structured.html
+++ b/public/structured.html
@@ -5,7 +5,7 @@
       { "csvw": "http://www.w3.org/ns/csvw#" }
     ],
     "@type": "Dataset",
-    "version": "April 1, 2023",
+    "version": "July 26, 2023",
     "name": "Alberta Fishing Regulations",
     "description": "Detailed 2021 fishing regulations for the province of Alberta for most named waterbodies.",
     "mainEntity": {
@@ -507,7 +507,7 @@
                 "csvw:value": "Carnarvon Lake"
               },
               {
-                "csvw:primaryKey": "carseland-bow-river-headwater-096a0",
+                "csvw:primaryKey": "carseland-bow-river-headwater-589f4",
                 "csvw:value": "Carseland-Bow River Headwater Canal"
               },
               {
@@ -1392,7 +1392,7 @@
                 "csvw:value": "Kerbe's Pond"
               },
               {
-                "csvw:primaryKey": "kids-can-catch-3965e",
+                "csvw:primaryKey": "kids-can-catch-42925",
                 "csvw:value": "Kids Can Catch Pond"
               },
               {
@@ -3589,7 +3589,7 @@
                 "csvw:value": "30-16-6-W5"
               },
               {
-                "csvw:primaryKey": "carseland-bow-river-headwater-096a0",
+                "csvw:primaryKey": "carseland-bow-river-headwater-589f4",
                 "csvw:value": "Between McGregor Lk and the drop structure 1 km upstream of Sec. Rd. 542"
               },
               {
@@ -4309,7 +4309,7 @@
                 "csvw:value": "NE-19-36-20-W4"
               },
               {
-                "csvw:primaryKey": "kids-can-catch-3965e",
+                "csvw:primaryKey": "kids-can-catch-42925",
                 "csvw:value": "13-24-1-W5"
               },
               {
@@ -6341,7 +6341,7 @@
                 "csvw:value": "ES1-Lakes"
               },
               {
-                "csvw:primaryKey": "carseland-bow-river-headwater-096a0",
+                "csvw:primaryKey": "carseland-bow-river-headwater-589f4",
                 "csvw:value": "PP1-Rivers"
               },
               {
@@ -7241,7 +7241,7 @@
                 "csvw:value": "PP2-Lakes"
               },
               {
-                "csvw:primaryKey": "kids-can-catch-3965e",
+                "csvw:primaryKey": "kids-can-catch-42925",
                 "csvw:value": "ES1-Lakes"
               },
               {
